--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-asgiref==3.2.10
-Django==3.0.8
-django-environ==0.4.5
-gunicorn==20.0.4
-pytz==2020.1
-sqlparse==0.3.1
-mysqlclient==2.1.0
-djangorestframework~=3.13.1
+asgiref==3.5.2
+Django==4.0.6
+django-environ==0.9.0
+gunicorn==20.1.0
+pytz==2022.1
+sqlparse==0.4.2
+mysqlclient==2.1.1
+djangorestframework==3.13.1
+django-cors-headers==3.13.0
