--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ sqlparse==0.4.2
 mysqlclient==2.1.1
 djangorestframework==3.13.1
 django-cors-headers==3.13.0
+djangorestframework-simplejwt==5.2.0
+PyJWT==2.4.0
