--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ django-cors-headers==3.11.0
 djangorestframework-simplejwt==5.1.0
 PyJWT==2.4.0
 requests==2.28.1
+boto3==1.24.23
+django-storages==1.12.3
