Add server_name to nginx

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -5,6 +5,7 @@ upstream momu-server {
 server {
 
   listen 80;
+  server_name momueat.com *.momueat.com;
 
   location / {
     proxy_pass http://momu-server;
