--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -7,6 +7,8 @@ server {
   listen 80;
   server_name momueat.com *.momueat.com;
 
+  client_max_body_size 500M;
+
   location / {
     proxy_pass http://momu-server;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
